# book-timer

./: .gitignore  CHANGELOG.md  README.md  book_timer.py  create_book_timer_shortcut.ps1  prompt.md  prompt.txt  pyproject.toml  start_book_timer.cmd  start_web_app.cmd  todo_calendar_freeze_20260404_1338.md  todo_parquet_history_20260405_0034.md  todo_reading_history_20260405_0020.md  web_app.py
frontend/: index.html  package-lock.json  package.json
frontend/src/: App.tsx  api.ts  main.tsx  styles.css  types.ts  utils.ts
frontend/src/components/: DayTimeline.tsx  ReadingHistory.tsx  SessionForm.tsx  SessionProgress.tsx  TodayEvents.tsx
modules/: google_calendar.py  reading_history_store.py  reading_session.py  session_state.py
notebooks/: reading_history.ipynb
tests/: test_google_calendar.py  test_reading_history_stats.py  test_reading_history_store.py  test_session_state.py  test_time_parsing.py  test_today_events.py  test_web_app.py
